--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1 style="text-align: center;">Hi My name is Shubham Gupta</h1>
-    <script src="/index.js"></script>
+    <!-- <script src="/index.js"></script> -->
+    <!-- <script src ="/templateLiterals.js"></script> -->
+    <!-- <script src="/array.js"></script> -->
+    <!-- <script src="/controlFlow.js"></script> -->
+    <script src="/objectLiteral.js"></script>
 </body>
-</html>
+</html> 
