--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Shubham</title>
+    <link rel=" stylesheet" href="./style.css">
 </head>
 <body>
-    <h1 style="text-align: center;">Hi My name is Shubham Gupta</h1>
-    <!-- <script src="/index.js"></script> -->
-    <!-- <script src ="/templateLiterals.js"></script> -->
-    <!-- <script src="/array.js"></script> -->
-    <!-- <script src="/controlFlow.js"></script> -->
-    <script src="/objectLiteral.js"></script>
+    <div class = "container">
+        <h1>Product Manager</h1>
+        <ul>
+            <li>Bread</li>
+            <li>Butter</li>
+            <li>Water</li>
+        </ul>
+        <button>Add product</button>
+    </div>
+    <script src="./index.js"></script>
 </body>
 </html> 
