--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <div class = "container">
-        <h1>Product Manager</h1>
-        <ul>
-            <li>Bread</li>
-            <li>Butter</li>
-            <li>Water</li>
-        </ul>
-        <button>Add product</button>
+        <h1>User Feedback</h1>
+        <form onsubmit = "displayData(event)" class="feedback-form">
+            <input onkeyup="usernameValidation(event)" type="text" id="username" placeholder="Username" autocomplete="off">
+            <textarea onkeyup="feedbackValidation(event)" id="feedback" placeholder="Feedback" autocomplete="off"></textarea>
+            <input type = "submit" id="submit" value = "Submit">
+        </form>
+        <p onclick="changeText(event)">Shubham</p>
     </div>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html> 
